Added implementation to all APIs